test/e2e/failing/libs.js
import Chance from 'chance';

export default { chance: new Chance() };
